fixed how horizontal scroll bar showed up

--- a/css/pagestyle.css
+++ b/css/pagestyle.css
@@ -137,8 +137,8 @@ footer {
     padding-bottom: 1%;
     padding-left: 3%;
     padding-right: 3%;
-    margin-right: -3%;
-    margin-left: -3%;
+    margin-right: -2.1%;
+    margin-left: -2.1%;
     margin-bottom: -1%;
     width: auto;
 }
